--- a/src/styles/components/header.scss
+++ b/src/styles/components/header.scss
@@ -10,5 +10,12 @@
 		font-size: 18px;
 		font-weight: 700;
 		text-transform: uppercase;
+		img {
+			width: 50px;
+			height: 50px;
+			border-radius: 50%;
+			background-position: center center;
+			background-size: cover;
+		}
 	}
 }
