--- a/src/styles/libs/class.scss
+++ b/src/styles/libs/class.scss
@@ -21,3 +21,14 @@
 .w-full {
 	width: 100%;
 }
+
+.text-center {
+	text-align: center;
+}
+
+h3 {
+	font-size: 18px;
+	text-transform: uppercase;
+	font-weight: 700;
+	margin-bottom: 15px;
+}
